--- a/pause-urbaine-website/layouts/partials/header.html
+++ b/pause-urbaine-website/layouts/partials/header.html
@@ -4,6 +4,7 @@
     <div class="container">
       <nav class="main-nav" aria-label="{{ i18n "nav.main" }}">
         <ul>
+          <li><a href="{{ site.Home.Permalink }}">{{ i18n "nav.home" }}</a></li>
           <li><a href="{{ "services" | relLangURL }}">{{ i18n "nav.services" }}</a></li>
           <li><a href="{{ "tarifs" | relLangURL }}">{{ i18n "nav.pricing" }}</a></li>
           <li><a href="{{ "contact" | relLangURL }}">{{ i18n "nav.contact" }}</a></li>
