--- a/pause-urbaine-website/layouts/partials/footer.html
+++ b/pause-urbaine-website/layouts/partials/footer.html
@@ -33,7 +33,7 @@
                    rel="noopener"
                    aria-label="Instagram {{ index .name site.Language.Lang }}">
                   <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                  {{ .instagram }}
+                  {{ strings.TrimPrefix "@" .instagram }}
                 </a>
               </p>
               
