--- a/pause-urbaine-website/layouts/partials/footer.html
+++ b/pause-urbaine-website/layouts/partials/footer.html
@@ -28,12 +28,12 @@
               </p>
               
               <p class="social-link">
-                <a href="https://instagram.com/{{ strings.TrimPrefix "@" .instagram }}" 
+                <a href="{{ .instagram }}" 
                    target="_blank" 
                    rel="noopener"
                    aria-label="Instagram {{ index .name site.Language.Lang }}">
                   <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                  {{ strings.TrimPrefix "@" .instagram }}
+                  Instagram
                 </a>
               </p>
               
@@ -74,16 +74,14 @@
       <div class="footer-social">
         <h3>{{ i18n "footer.follow_us" }}</h3>
         <div class="social-links">
-          {{ range site.Data.locations.locations }}
-          <a href="https://instagram.com/{{ strings.TrimPrefix "@" .instagram }}" 
+          <a href="https://www.instagram.com/pauseurbaine/" 
              class="social-link-item"
              target="_blank" 
              rel="noopener"
-             aria-label="Instagram {{ index .name site.Language.Lang }}">
+             aria-label="Instagram Pause Urbaine">
             <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-            <span>{{ index .name site.Language.Lang }}</span>
+            <span>@pauseurbaine</span>
           </a>
-          {{ end }}
         </div>
       </div>
     </div>
