feat(locations): add Google Maps links to addresses and location pins
- Add maps_url field to both locations in locations.yaml
- Make location card addresses clickable with Google Maps links
- Make header location pins clickable with Google Maps links
- Add i18n translations for "view_on_maps"
- Add hover styles for clickable location elements

--- a/pause-urbaine-website/assets/scss/_components.scss
+++ b/pause-urbaine-website/assets/scss/_components.scss
@@ -143,6 +143,14 @@
           text-decoration: underline;
         }
       }
+      
+      .address-link {
+        display: inline-block;
+        
+        &:hover {
+          color: $primary-color;
+        }
+      }
     }
   }
 
