--- a/pause-urbaine-website/assets/scss/_layout.scss
+++ b/pause-urbaine-website/assets/scss/_layout.scss
@@ -135,11 +135,22 @@
       display: inline-flex;
       align-items: center;
       gap: 0.25rem;
+      text-decoration: none;
+      transition: color $transition-speed;
+      padding: 0.25rem 0.5rem;
+      margin: -0.25rem -0.5rem;
+      
+      &:hover {
+        color: darken($primary-color, 10%);
+        text-decoration: underline;
+      }
       
       @media (max-width: $breakpoint-mobile) {
         width: 100%; // Full width on small phones
         justify-content: center;
         margin-bottom: 0.25rem;
+        padding: 0.375rem 0.625rem;
+        margin: -0.375rem -0.625rem;
       }
     }
 
