--- a/pause-urbaine-website/layouts/partials/location-card.html
+++ b/pause-urbaine-website/layouts/partials/location-card.html
@@ -14,9 +14,11 @@
       <p>
         <i class="fa-solid fa-map-marker-alt" aria-hidden="true"></i>
         <span class="sr-only">{{ i18n "common.address" }}:</span>
-        {{ $location.address.street }}<br>
-        {{ $location.address.postal }} {{ $location.address.city }}<br>
-        {{ $location.address.country }}
+        <a href="{{ $location.maps_url }}" target="_blank" rel="noopener noreferrer" class="address-link">
+          {{ $location.address.street }}<br>
+          {{ $location.address.postal }} {{ $location.address.city }}<br>
+          {{ $location.address.country }}
+        </a>
       </p>
     </div>
     
