fix(locations): reorder opening hours in natural day sequence
- Convert hours from object to array format to preserve order
- Add bilingual day names (fr/en) to each hour entry
- Update location-card partial to iterate over hours array
- Ensures days display in natural order: Mon-Sun

--- a/pause-urbaine-website/layouts/partials/location-card.html
+++ b/pause-urbaine-website/layouts/partials/location-card.html
@@ -48,10 +48,10 @@
       </p>
       <table class="location-card__hours-table">
         <tbody>
-          {{ range $day, $hours := $location.hours }}
+          {{ range $location.hours }}
           <tr>
-            <td class="location-card__day">{{ i18n (printf "days.%s" $day) }}:</td>
-            <td class="location-card__time">{{ $hours }}</td>
+            <td class="location-card__day">{{ index .day $lang }}:</td>
+            <td class="location-card__time">{{ .time }}</td>
           </tr>
           {{ end }}
         </tbody>
