--- a/pause-urbaine-website/assets/scss/_components.scss
+++ b/pause-urbaine-website/assets/scss/_components.scss
@@ -1036,20 +1036,8 @@
       height: 100%;
       object-fit: cover;
       transition: transform $transition-speed;
-    }
-
-    // Placeholder styling when image doesn't load
-    &::after {
-      content: '\f0c8'; // Font Awesome scissors icon
-      font-family: 'Font Awesome 6 Free';
-      font-weight: 900;
-      font-size: 4rem;
-      color: rgba($primary-color, 0.2);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 0;
+      position: relative;
+      z-index: 1;
     }
   }
 
