--- a/pause-urbaine-website/assets/scss/_components.scss
+++ b/pause-urbaine-website/assets/scss/_components.scss
@@ -24,6 +24,15 @@
     transform: translateY(0);
   }
 
+  &-primary {
+    background: $primary-color;
+    color: $background;
+
+    &:hover {
+      background: darken($primary-color, 10%);
+    }
+  }
+
   &-secondary {
     background: $secondary-color;
     color: $text-color;
