feat(booking): add online booking links to location cards
- Add booking_url to locations data for both salons
- Bel-Air: https://book.heygoldie.com/PauseUrbaine
- Eaux-Vives: https://book.heygoldie.com/PauseUrbaineEAUX-VIVES
- Display booking button in location cards on contact page
- Button opens in new tab with calendar icon

--- a/pause-urbaine-website/layouts/partials/location-card.html
+++ b/pause-urbaine-website/layouts/partials/location-card.html
@@ -38,6 +38,21 @@
           {{ $location.instagram }}
         </a>
       </p>
+      {{- if $location.booking_url -}}
+      <p>
+        <a href="{{ $location.booking_url }}" 
+           target="_blank" 
+           rel="noopener noreferrer"
+           class="btn btn-primary">
+          <i class="fa-solid fa-calendar-check" aria-hidden="true"></i>
+          {{ if eq $lang "fr" }}
+          Réserver en ligne
+          {{ else }}
+          Book online
+          {{ end }}
+        </a>
+      </p>
+      {{- end -}}
     </div>
     
     {{- /* Opening hours section */ -}}
