--- a/pause-urbaine-wp-theme/assets/_layout.scss
+++ b/pause-urbaine-wp-theme/assets/_layout.scss
@@ -1,3 +1,6 @@
+@use 'sass:color';
+@use 'variables' as *;
+
 // Container
 .container {
   max-width: $container-max-width;
@@ -141,7 +144,7 @@
       margin: -0.25rem -0.5rem;
       
       &:hover {
-        color: darken($primary-color, 10%);
+        color: color.adjust($primary-color, $lightness: -10%);
         text-decoration: underline;
       }
       
